# ChangeLog for mail-filter/postgrey
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/postgrey/ChangeLog,v 1.34 2007/08/04 15:49:22 dertobi123 Exp $

*postgrey-1.30 (04 Aug 2007)

  04 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  -files/postgrey.conf, -files/postgrey.rc, -postgrey-1.21-r2.ebuild,
  -postgrey-1.27.ebuild, -postgrey-1.28.ebuild, -postgrey-1.29.ebuild,
  +postgrey-1.30.ebuild:
  Version bump and clean up

*postgrey-1.29 (28 Jul 2007)

  28 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  +postgrey-1.29.ebuild:
  Version bump

  26 Jul 2007; Raúl Porcel <armin76@gentoo.org> postgrey-1.24.ebuild:
  alpha stable

  27 Jun 2007; Raúl Porcel <armin76@gentoo.org> postgrey-1.28.ebuild:
  Re-add ~alpha wrt #183038

  27 Jun 2007; Markus Rothe <corsair@gentoo.org> postgrey-1.28.ebuild:
  Added ~ppc64; bug #183038

  26 Jun 2007; Ferris McCormick <fmccor@gentoo.org> postgrey-1.28.ebuild:
  Re-keyword ~sparc at developer's request --- Bug #183038 --- all seems well.

*postgrey-1.28 (26 Jun 2007)

  26 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  postgrey-1.21-r2.ebuild, postgrey-1.24.ebuild, postgrey-1.27.ebuild,
  +postgrey-1.28.ebuild:
  Version bump per bug #183038, added new dev-perl/Parse-Syslog dependency
  needed for the policy-test script which has been added to postgrey.
  Fixed HOMEPAGE and SCR_URI per bug #182761.

  18 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> postgrey-1.27.ebuild:
  Keyworded ~sparc wrt #172399

  18 Mar 2007; Marius Mauch <genone@gentoo.org> postgrey-1.21-r2.ebuild,
  postgrey-1.24.ebuild, postgrey-1.27.ebuild:
  Replacing einfo with elog

  30 Jan 2007; Patrick McLean <chutzpah@gentoo.org> files/postgrey.rc.new:
  Add "reload" to rc script.

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> -postgrey-1.23.ebuild:
  QA: Clean unused versions.

  24 Dec 2006; Andrej Kacian <ticho@gentoo.org> postgrey-1.27.ebuild: