@@ -1,0 +1,3 @@
+MD5 5698c196a5874eb963a374d8aab183ca postgrey-1.30.tar.gz 34109
+RMD160 19cf01241bf342dff3a4d7c23b11f3b11f29eeeb postgrey-1.30.tar.gz 34109
+SHA256 d96b59b3bd1c31d33592359d0395b2b24bcd2232f1a7f99c6b29aec8d1bfb1f8 postgrey-1.30.tar.gz 34109
