@@ -1,6 +1,13 @@
 # ChangeLog for mail-filter/postgrey
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/postgrey/ChangeLog,v 1.34 2007/08/04 15:49:22 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/postgrey/ChangeLog,v 1.35 2007/08/08 23:23:26 dertobi123 Exp $
+
+*postgrey-1.30-r1 (08 Aug 2007)
+
+  08 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  +postgrey-1.30-r1.ebuild:
+  Revbump, add dev-perl/Net-RBLClient to RDEPEND as reported by Andrew Ross,
+  bug #187964
 
 *postgrey-1.30 (04 Aug 2007)
 
